<resources>
    <string name="app_name">Agenda</string>
    <string name="title_toolbar">Contatos</string>
    <string name="add_novo_contato">Adicionar novo contato</string>
    <string name="add_nome">Nome</string>
    <string name="add_primeiro_nome">Primeironome</string>
    <string name="add_segundo_nome">Segundonome</string>
    <string name="add_sobre_nome">Segundo nome</string>
    <string name="add_cell">Telefone</string>
    <string name="add_telefone">Adicionar Número</string>
    <string name="add_Numero">Adicionar</string>
</resources>