<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarContatoActivity">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/add_novo_contato"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cor_toolbar"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_nome"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/campoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_primeiro_nome"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/sobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_sobre_nome"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoNome"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/campoSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_segundo_nome"
        app:layout_constraintTop_toBottomOf="@+id/sobrenome"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/cell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_cell"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoSobrenome"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/campoCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_telefone"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/cell"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/campoCell"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:text="@string/add_Numero"
        android:textSize="20sp"
        android:backgroundTint="@color/cor_toolbar"/>


</androidx.constraintlayout.widget.ConstraintLayout>